--- a/site/style.css
+++ b/site/style.css
@@ -1,9 +1,28 @@
 body {
-    font-family: Helvetica, Arial, sans-serif;
-    background-color: #f2f2f2;
-    color: #333333;
+    font-family: Helvetica;
+    background-color: #252322;
+    color: #ffffff;
+}
+
+img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
 }
 
 a {
-    color: #222222;
+    color: #ffffff;
+    text-decoration: none;
+}
+
+nav {
+    background-color: gray;
+    font-weight: bold;
+    border-radius: 5px;
+    padding: 10px;
+    display: inline;
+}
+
+nav a {
+    padding: 10px
 }
