Update src code

--- a/src/style.css
+++ b/src/style.css
@@ -1,28 +1,69 @@
+/* Body */
 body {
-    font-family: Helvetica;
-    background-color: #252322;
-    color: #ffffff;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    padding: 0;
+    color: #222222;
+    scroll-behavior: smooth;
 }
 
-img {
+main {
+    padding:20px;
+}
+
+/* Links */
+a {
+    text-decoration: none;
+    color: #222222;
+}
+
+/* Header */
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 20px;
+    background-color: #222222;
+}
+
+header img {
     width: 100px;
     height: 100px;
-    border-radius: 50px;
+    border-radius: 50%;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
+nav ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
 }
 
-nav {
-    background-color: gray;
-    font-weight: bold;
-    border-radius: 5px;
-    padding: 10px;
-    display: inline;
+nav ul li {
+    margin: 0 10px;
 }
 
 nav a {
-    padding: 10px
+    color: #f2f2f2;
+}
+
+/* Footer */
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0;
+    background-color: #222222;
+    color: #f2f2f2;
+    font-family: monospace;
+}
+
+footer h3 {
+    margin: 20px 0 0 0;
+}
+
+.footer-links img {
+    width: 40px;
+    height: 40px;
+    margin: 0 10px;
 }
