--- a/src/style.css
+++ b/src/style.css
@@ -1,36 +1,43 @@
-/* Body */
+/* BODY */
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
-    color: #222222;
+    color: #f2f2f2;
+    background-color: #222222;
     scroll-behavior: smooth;
 }
 
 main {
-    padding:20px;
+    padding: 0 60px;
 }
 
-/* Links */
+/* LINKS */
 a {
     text-decoration: none;
-    color: #222222;
+    color: #f2f2f2;
 }
 
-/* Header */
+/* HEADER */
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 15px 20px;
-    background-color: #222222;
+    transform: translateX(120%);
+    margin: 20px 0;
+    height: 50px;
+    width: 450px;
+    border: 1px solid #a9a9a933;
+    border-radius: 50px;
+    background-color: #72727233;
+    backdrop-filter: blur(10px);
 }
 
-header img {
+/* header img {
     width: 100px;
     height: 100px;
     border-radius: 50%;
-}
+} */
 
 nav ul {
     display: flex;
@@ -39,23 +46,36 @@ nav ul {
 }
 
 nav ul li {
-    margin: 0 10px;
+    margin: 0 25px;
 }
 
 nav a {
-    color: #f2f2f2;
+    font-size: 17px;
+    font-weight: 600;
+    color: #bbbbbb;
 }
 
-/* Footer */
+nav a:hover, nav a:focus {
+    color: #f2f2f2;
+    transition: .3s;
+}
+
+/* PROJECTS */
+.projects-div {
+    cursor: pointer;
+
+}
+
+/* FOOTER */
 footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 30px 0;
-    background-color: #222222;
     color: #f2f2f2;
     font-family: monospace;
+    border-top: 1px solid #f2f2f2;
 }
 
 footer h3 {
