--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,9 @@
 /* BODY */
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
@@ -9,7 +13,7 @@ body {
 }
 
 main {
-    padding: 0 60px;
+    padding: 0 80px;
 }
 
 /* LINKS */
@@ -23,7 +27,6 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    transform: translateX(120%);
     margin: 20px 0;
     height: 50px;
     width: 450px;
@@ -61,9 +64,30 @@ nav a:hover, nav a:focus {
 }
 
 /* PROJECTS */
+.projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 50px;
+}
+
 .projects-div {
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    height: 200px;
+    width: 400px;
+    border: 1px solid rgba(132, 132, 132, 0.5);
+    border-radius: 25px;
+    background-color: rgba(61, 61, 61, 0.5);    
+    transition: all .3s;
+}
 
+.projects-div:hover {
+    transform: scale(1.01);
+    border-color: rgba(255, 255, 255, 0.5);
 }
 
 /* FOOTER */
