--- a/src/style.css
+++ b/src/style.css
@@ -74,28 +74,25 @@ nav a:hover, nav a:focus {
 }
 
 .main-info p {
-    font-size: 20px;
+    font-size: 1.5em;
     line-height: 1.8;
-}
-
-@media (max-width: 60em) {
-    .main-info span {
-        font-size: 4em;
-    }
 }
 
 @media (max-width: 50.4em) {
     .main-info span {
-        font-size: 3.5em;
+        font-size: 4em;
     }
     .main-info p {
-        font-size: 16px;
+        font-size: 1.2em;
     }
 }
 
-@media (max-width: 45.4em) {
+@media (max-width: 40.6em) {
     .main-info span {
-        font-size: 2.5em;
+        font-size: 3em;
+    }
+    .main-info p {
+        font-size: 1em;
     }
 }
 
