--- a/src/style.css
+++ b/src/style.css
@@ -1,167 +1,179 @@
 /* BODY */
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
-    padding: 0;
-    color: #f2f2f2;
-    background-color: #222222;
-    scroll-behavior: smooth;
-}
-
-main {
-    padding: 0 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0;
+  padding: 0;
+  color: #f2f2f2;
+  background-color: #222222;
+  scroll-behavior: smooth;
 }
 
 /* LINKS */
 a {
-    text-decoration: none;
-    color: #f2f2f2;
+  text-decoration: none;
+  color: #f2f2f2;
 }
 
 /* HEADER */
 header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px 0;
-    height: 50px;
-    width: 500px;
-    position: fixed;
-    top: 0;
-    z-index: 5;
-    border: 1px solid #a9a9a933;
-    border-radius: 50px;
-    background-color: #72727233;
-    backdrop-filter: blur(10px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+  height: 50px;
+  width: 500px;
+  position: fixed;
+  top: 0;
+  z-index: 5;
+  border: 1px solid #a9a9a933;
+  border-radius: 50px;
+  background-color: #72727233;
+  backdrop-filter: blur(10px);
 }
+/* Ridimensionare il header */
 
 nav ul {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    gap: 40px;
+  display: flex;
+  list-style: none;
+  padding: 0;
+  gap: 40px;
 }
 
 nav a {
-    font-size: 1.06em;
-    font-weight: 600;
-    color: #bbbbbb;
-    transition: .3s ease-in-out;
+  font-size: 1.06em;
+  font-weight: 600;
+  color: #bbbbbb;
+  transition: 0.3s ease-in-out;
 }
 
-nav a:hover, nav a:focus {
-    color: #f2f2f2;
+nav a:hover,
+nav a:focus {
+  color: #f2f2f2;
+}
+
+/* MAIN */
+main {
+  max-width: 1300px;
+  padding: 0 25px;
+  
+}
+
+main p {
+  color: #bbbbbb;
 }
 
 /* MAIN INFO */
 .main-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: monospace;
-    text-align: center;
-    margin: 180px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: monospace;
+  text-align: center;
+  margin: 170px 0;
 }
 
 .main-info span {
-    font-size: 5em;
-    line-height: 1.5;
+  font-size: 5em;
+  line-height: 1.4;
 }
 
 .main-info p {
-    font-size: 1.5em;
-    line-height: 1.8;
+  font-size: 1.5em;
+  line-height: 1.8;
+  color: #bbbbbb;
 }
 
 @media (max-width: 50.4em) {
-    .main-info span {
-        font-size: 4em;
-    }
-    .main-info p {
-        font-size: 1.2em;
-    }
+  .main-info span {
+    font-size: 4em;
+  }
+  .main-info p {
+    font-size: 1.2em;
+  }
 }
 
 @media (max-width: 40.6em) {
-    .main-info span {
-        font-size: 3em;
-    }
-    .main-info p {
-        font-size: 1em;
-    }
+  .main-info span {
+    font-size: 3em;
+  }
+  .main-info p {
+    font-size: 1em;
+  }
+  main {
+    font-size: 14px;
+  }
 }
 
 /*SKILLS */
 .skills {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 20px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .skills p {
-    margin: 0;
-    padding: 10px 20px;
-    border: 1px solid #f2f2f2;
-    border-radius: 5px;
-    background-color: rgba(61, 61, 61, 0.5);
+  margin: 0;
+  padding: 10px 20px;
+  border: 1px solid #f2f2f2;
+  border-radius: 5px;
+  background-color: rgba(61, 61, 61, 0.5);
 }
 
-.skills-heading, .projects-heading {
-    margin-top: 70px;
+.skills-heading,
+.projects-heading {
+  margin-top: 70px;
 }
 
 /* PROJECTS */
 .projects {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 50px;
 }
 
 .projects-div {
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    height: 200px;
-    width: 400px;
-    border: 1px solid rgba(132, 132, 132, 0.5);
-    border-radius: 25px;
-    background-color: rgba(61, 61, 61, 0.5);    
-    transition: all .3s ease-in-out;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  height: 200px;
+  width: 400px;
+  border: 1px solid rgba(132, 132, 132, 0.5);
+  border-radius: 25px;
+  background-color: rgba(61, 61, 61, 0.5);
+  transition: all 0.3s ease-in-out;
 }
 
 .projects-div:hover {
-    transform: scale(1.01);
-    border-color: rgba(255, 255, 255, 0.5);
+  transform: scale(1.01);
+  border-color: rgba(255, 255, 255, 0.5);
 }
 
 /* FOOTER */
 footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-    padding: 30px 0;
-    color: #f2f2f2;
-    font-family: monospace;
-    border-top: 1px solid #f2f2f2;
-}
-
-footer h3 {
-    margin: 20px 0 0 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  padding: 30px 0;
+  color: #f2f2f2;
+  font-family: monospace;
+  border-top: 1px solid #f2f2f2;
 }
 
 .footer-links img {
-    width: 40px;
-    height: 40px;
-    margin: 0 10px;
+  width: 40px;
+  height: 40px;
+  margin: 0 10px;
+  padding: 5px 0;
 }
