--- a/styles/style.css
+++ b/styles/style.css
@@ -28,16 +28,16 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px 0;
-  height: 50px;
-  width: 500px;
+  margin: 1.25em 0;
+  height: 3.125em;
+  width: 31.25em;
   position: fixed;
   top: 0;
   z-index: 5;
-  border: 1px solid #a9a9a933;
-  border-radius: 50px;
+  border: 0.0625em solid #a9a9a933;
+  border-radius: 3.125em;
   background-color: #72727233;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(0.625em);
 }
 /* Ridimensionare il header */
 
@@ -45,7 +45,7 @@ nav ul {
   display: flex;
   list-style: none;
   padding: 0;
-  gap: 40px;
+  gap: 2.5em;
 }
 
 nav a {
@@ -62,8 +62,8 @@ nav a:focus {
 
 /* MAIN */
 main {
-  max-width: 1300px;
-  padding: 0 25px 25px;
+  max-width: 81.25em;
+  padding: 0 1.5625em 1.5625em;
   
 }
 
@@ -79,7 +79,7 @@ main p {
   align-items: center;
   font-family: monospace;
   text-align: center;
-  margin: 170px 0;
+  margin: 10.625em 0;
 }
 
 .main-info span {
@@ -110,7 +110,7 @@ main p {
     font-size: 1em;
   }
   main {
-    font-size: 14px;
+    font-size: 0.875em;
   }
 }
 
@@ -119,20 +119,20 @@ main p {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 1.25em;
 }
 
 .skills p {
   margin: 0;
-  padding: 10px 20px;
-  border: 1px solid #a9a9a933;
-  border-radius: 5px;
+  padding: 0.625em 1.25em;
+  border: 0.0625em solid #a9a9a933;
+  border-radius: 0.3125em;
   background-color: #72727233;
 }
 
 .skills-heading,
 .projects-heading {
-  margin-top: 70px;
+  margin-top: 4.375em;
 }
 
 /* PROJECTS */
@@ -140,19 +140,19 @@ main p {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
-  margin-top: 50px;
+  gap: 1.25em;
+  margin-top: 3.125em;
 }
 
 .projects-div {
   cursor: pointer;
   display: flex;
   flex-direction: column;
-  padding: 20px;
-  height: 200px;
-  width: 400px;
-  border: 1px solid rgba(132, 132, 132, 0.5);
-  border-radius: 25px;
+  padding: 1.25em;
+  height: 12.5em;
+  width: 25em;
+  border: 0.0625em solid rgba(132, 132, 132, 0.5);
+  border-radius: 1.5625em;
   background-color: rgba(61, 61, 61, 0.5);
   transition: all 0.3s ease-in-out;
 }
@@ -168,16 +168,43 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 50px;
-  padding-top: 30px;
+  margin-top: 3.125em;
+  padding-top: 1.875em;
   color: #f2f2f2;
   font-family: monospace;
-  border-top: 1px solid #f2f2f2;
+  border-top: 0.0625em solid #f2f2f2;
 }
 
 .footer-links img {
-  width: 40px;
-  height: 40px;
-  margin: 0 10px;
-  padding: 5px 0;
+  width: 2.5em;
+  height: 2.5em;
+  margin: 0 0.625em;
+  padding: 0.3125em 0;
+}
+
+/* MOBILE RESPONSIVE*/
+@media (max-width: 40em) {
+  header {
+    width: fit-content;
+    padding: 0 1.25em;
+  }
+  nav ul {
+    gap: 2em;
+  }
+  nav a {
+    font-size: 1em;
+  }
+  .main-info {
+    margin-bottom: 5em;
+  }
+  .main-info span {
+    font-size: 2.5em;
+  }
+  .skills {
+    gap: 0.625em;
+  }
+  .projects-div {
+    height: 12em;
+    width: 22em;
+  }
 }
