--- a/styles/style.css
+++ b/styles/style.css
@@ -240,4 +240,10 @@ footer {
   nav a {
     font-size: 0.95em;
   }
+  .main-info span {
+    font-size: 2.1em;
+  }
+  .main-info p {
+    font-size: 0.8em;
+  }
 }
