--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ body {
 /* LINKS */
 a {
   text-decoration: none;
-  color: #f2f2f2;
+  color: #bbbbbb;
 }
 
 /* HEADER */
@@ -50,7 +50,6 @@ nav ul {
 nav a {
   font-size: 1.06em;
   font-weight: 600;
-  color: #bbbbbb;
   transition: 0.3s ease-in-out;
 }
 
@@ -67,6 +66,10 @@ main {
 
 main p {
   color: #bbbbbb;
+}
+
+main a {
+  text-decoration: underline;
 }
 
 /* MAIN INFO */
@@ -116,6 +119,7 @@ main p {
 .skills {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 1.25em;
 }
