--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,6 @@ main {
 
 main p {
   color: #bbbbbb;
-  font-size: 1.12em;
 }
 
 main a {
@@ -95,16 +94,16 @@ main a {
   color: #bbbbbb;
 }
 
-@media (max-width: 50.4em) {
+@media (max-width: 440px) {
   .main-info span {
-    font-size: 4em;
+    font-size: 3.5em;
   }
   .main-info p {
-    font-size: 1.2em;
+    font-size: 1em;
   }
 }
 
-@media (max-width: 40.6em) {
+@media (max-width: 380px) {
   .main-info span {
     font-size: 3em;
   }
