--- a/styles/style.css
+++ b/styles/style.css
@@ -27,12 +27,10 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 1.25em 0;
   height: 3.125em;
   width: 31.25em;
   position: fixed;
-  top: 0;
-  z-index: 5;
+  top: 1.25em;
   border: 0.0625em solid #a9a9a933;
   border-radius: 3.125em;
   background-color: #72727233;
@@ -174,7 +172,7 @@ footer {
     font-size: 3.5em;
   }
   .main-info p {
-    font-size: 1em;
+    font-size: 1.2em;
   }
 }
 
@@ -209,7 +207,7 @@ footer {
     font-size: 2.3em;
   }
   .main-info p {
-    font-size: 1em;
+    font-size: 0.9em;
   }
   .skills {
     gap: 0.625em;
