--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,8 +13,8 @@ body {
   user-select: none;
   margin: 0;
   padding: 0;
-  color: #f2f2f2;
   background: linear-gradient(to bottom, #222222, #0f0f0f);
+  color: #f2f2f2;
 }
 
 /* LINKS */
@@ -28,27 +28,27 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 3.125em;
-  width: 31.25em;
+  height: 50px;
+  width: 500px;
   position: fixed;
-  top: 1.25em;
+  top: 20px;
   z-index: 1;
-  border: 0.0625em solid #a9a9a933;
-  border-radius: 3.125em;
   background-color: #72727233;
-  -webkit-backdrop-filter: blur(0.625em);
-  backdrop-filter: blur(0.625em);
+  border: 1px solid #a9a9a933;
+  border-radius: 50px;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
 }
 
 nav ul {
   display: flex;
   list-style: none;
   padding: 0;
-  gap: 2.5em;
+  gap: 40px;
 }
 
 nav a {
-  font-size: 1.06em;
+  font-size: 17px;
   font-weight: 600;
   transition: .3s ease-in-out;
 }
@@ -86,18 +86,19 @@ nav a:focus {
 }
 
 .picture-div img {
-  width: 410px;
   height: 410px;
+  width: 410px;
 }
 
 /* MAIN */
 main {
-  max-width: 81.25em;
-  padding: 0 1.5625em 1.5625em;
+  max-width: 1200px;
+  padding: 0 25px 25px;
 }
 
 main p {
-  font-size: 15px;
+  font-size: 16px;
+  line-height: 1.6;
   color: #bbbbbb;
 }
 
@@ -112,24 +113,21 @@ main a:hover {
 
 /*SKILLS */
 .skills {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 1.25em;
+  text-align: center;
+  gap: 10px;
 }
 
-.skills p {
+.skills span {
   margin: 0;
-  padding: .625em 1.25em;
-  border: .0625em solid #a9a9a933;
-  border-radius: .3125em;
-  background-color: #72727233;
+  padding: 10px 20px;
+  background-color: rgba(225, 225, 225, 0.06);
+  border: 1px solid rgba(225, 225, 225, 0.1);
+  border-radius: 5px;
 }
 
 .skills-heading,
 .projects-heading {
-  margin-top: 4.375em;
+  margin-top: 70px;
 }
 
 /* PROJECTS */
@@ -137,24 +135,39 @@ main a:hover {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 1.25em;
-  margin-top: 3.125em;
+  gap: 20px;
+  margin-top: 50px;
 }
 
 .projects-div {
-  padding: 1.25em;
-  height: 12.5em;
-  width: 25em;
-  border: .0625em solid rgba(132, 132, 132, 0.5);
-  border-radius: 1.5625em;
-  background-color: rgba(61, 61, 61, 0.5);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: rgba(225, 225, 225, 0.02);
+  border: 1px solid rgba(225, 225, 225, 0.1);
+  border-radius: 10px;
   cursor: pointer;
-  transition: all .3s ease-in-out;
+  height: 200px;
+  width: 300px;
+  padding: 20px;
+  position: relative;
+  transition: .3s ease-in-out;
 }
 
-.projects-div:hover {
-  transform: scale(1.01);
-  border-color: rgba(255, 255, 255, 0.5);
+.projects-div::before {
+  background: radial-gradient(
+    800px circle at 100px 100px,
+    rgba(255, 255, 255, 0.06),
+    transparent 40%
+  );
+  border-radius: inherit;
+  content: '';
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: 2;
 }
 
 /* FOOTER */
@@ -163,7 +176,7 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 3.125em;
+  margin-top: 50px;
   padding-top: 1.875em;
   color: #f2f2f2;
   font-family: monospace;
@@ -240,7 +253,7 @@ footer {
 @media (max-width: 30em) {
   header {
     width: fit-content;
-    padding: 0 1.25em;
+    padding: 0 20px;
   }
   nav ul {
     gap: 2em;
