Update styles and layout for responsiveness

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,7 +13,7 @@ body {
   user-select: none;
   margin: 0;
   padding: 0;
-  background: linear-gradient(to bottom, #222222, #0f0f0f);
+  background-color: #131313;
   color: #f2f2f2;
 }
 
@@ -32,12 +32,12 @@ header {
   width: 500px;
   position: fixed;
   top: 20px;
-  z-index: 1;
   background-color: #72727233;
   border: 1px solid #a9a9a933;
   border-radius: 50px;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
+  z-index: 1;
 }
 
 nav ul {
@@ -76,18 +76,19 @@ nav a:focus {
 
 .text-div span {
   font-size: 64px;
-  line-height: 1.4;
+  line-height: 1.2;
 }
 
 .text-div p {
   font-size: 18px;
-  line-height: 1.8;
+  line-height: 1.6;
   color: #bbbbbb;
 }
 
 .picture-div img {
   height: 400px;
   width: 400px;
+  opacity: 0.9;
 }
 
 /* MAIN */
@@ -122,10 +123,10 @@ main a:hover {
 .skills p {
   margin: 0;
   padding: 10px 20px;
-  background-color: rgba(225, 225, 225, 0.06);
+  background-color: rgba(225, 225, 225, 0.02);
   border: 1px solid rgba(225, 225, 225, 0.1);
   border-radius: 5px;
-  color: #fff;
+  color: #f2f2f2;
 }
 
 .skills-heading,
@@ -138,11 +139,11 @@ main a:hover {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 15px;
   margin-top: 50px;
 }
 
-.projects-div {
+.project {
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -150,28 +151,17 @@ main a:hover {
   border: 1px solid rgba(225, 225, 225, 0.1);
   border-radius: 10px;
   cursor: pointer;
-  height: 200px;
+  height: 240px;
   width: 300px;
   padding: 20px;
-  position: relative;
   transition: .3s ease-in-out;
 }
 
-.projects-div::before {
-  background: radial-gradient(
-    800px circle at 100px 100px,
-    rgba(255, 255, 255, 0.06),
-    transparent 40%
-  );
-  border-radius: inherit;
-  content: '';
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  z-index: 2;
+.project:hover {
+  background-color: rgba(225, 225, 225, 0.04);
+  border-color: rgba(225, 225, 225, 0.2);
 }
+
 
 /* FOOTER */
 footer {
