--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -32,8 +32,8 @@ header {
   width: 500px;
   position: fixed;
   top: 20px;
-  background-color: #72727233;
-  border: 1px solid #a9a9a933;
+  background-color: rgba(225, 225, 225, 0.04);
+  border: 1px solid rgba(225, 225, 225, 0.1);
   border-radius: 50px;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
@@ -249,57 +249,50 @@ footer {
     padding: 0 20px;
   }
   nav ul {
-    gap: 2em;
+    gap: 35px;
   }
   nav a {
-    font-size: 1em;
+    font-size: 16px;
   }
   .main-info {
-    margin-top: 8em;
+    margin-top: 128px;
   }
   .text-div {
     text-align: center;
   }
   .text-div span {
-    font-size: 2.5em;
+    font-size: 35px;
   }
   .text-div p {
-    font-size: .8em;
+    font-size: 10.5px;
   }
   .picture-div {
     display: none;
   }
-  .skills {
-    gap: .625em;
-  }
-  .projects-div {
-    height: 12em;
-    width: 22em;
+  .project {
+    height: 150px;
+    width: 300px;
+    p {
+      font-size: 14px;
+    }
   }
 }
 
 @media (max-width: 26.25em) {
   header {
     width: fit-content;
-    padding: 0 1.3em;
+    padding: 0 20px;
   }
   nav ul {
-    gap: 1.7em;
+    gap: 30px;
   }
   nav a {
-    font-size: .95em;
+    font-size: 15px;
   }
   .text-div span {
-    font-size: 2.3em;
+    font-size: 30px;
   }
   main p {
-    font-size: .95em;
-  }
-  .skills {
-    gap: .625em;
-  }
-  .projects-div {
-    height: 11em;
-    width: 20em;
+    font-size: 10px;
   }
 }
