--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -165,6 +165,23 @@ main a:hover {
   border-color: rgba(225, 225, 225, 0.2);
 }
 
+.project span {
+  font-size: 21px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.project .arrow-up {
+  color: rgba(225, 225, 225, 0.6);
+  height: 25px;
+  width: 25px;
+  margin-left: auto;
+}
+
+.project .arrow-up:hover {
+  transition: .3s ease-in-out;
+  color: #f2f2f2;
+}
 
 /* FOOTER */
 footer {
