Fix project's signifier responsiveness

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -284,15 +284,20 @@ footer {
     display: none;
   }
   .project {
-    height: 150px;
+    height: 160px;
     width: 300px;
-    p {
-      font-size: 14px;
-    }
+  }
+  .project .arrow-up {
+    height: 20px;
+    width: 20px;
   }
   .project h2 {
+    font-size: 20px;
     margin-top: 0;
     margin-bottom: 5px;
+  }
+  .project p {
+    margin-bottom: 0;
   }
 }
 
