Improve color contrast and add meta description

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -105,7 +105,7 @@ main p {
 }
 
 main a {
-  color: darkorchid;
+  color: #bc35ff;
   font-weight: bold;
   text-decoration: underline;
   text-underline-offset: 2px;
