--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -156,8 +156,10 @@ main a:hover {
 
 .project .arrow-up {
   color: rgba(225, 225, 225, 0.6);
-  height: 25px;
-  width: 25px;
+  min-height: 25px;
+  min-width: 25px;
+  max-height: 25px;
+  max-width: 25px;
   margin-left: auto;
 }
 
