--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -26,18 +26,17 @@ a {
 
 /* HEADER */
 header {
+  position: fixed;
+  top: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50px;
-  width: 500px;
-  position: fixed;
-  top: 20px;
-  background-color: rgba(225, 225, 225, 0.04);
-  border: 1px solid rgba(225, 225, 225, 0.1);
-  border-radius: 50px;
-  -webkit-backdrop-filter: blur(10px);
+  width: 100%;
+  height: 60px;
+  font-size: 16px;
+  padding: 0 20px;
   backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   z-index: 1;
 }
 
@@ -306,8 +305,8 @@ footer h3 {
     width: 330px;
     height: 330px;
   }
-  main {
-    font-size: .875em;
+  .main {
+    font-size: 14px;
   }
 }
 
@@ -429,9 +428,6 @@ footer h3 {
   }
   main p {
     font-size: 14px;
-  }
-  main .about {
-    font-size: 13px;
   }
   .project {
     width: 280px;
