--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -31,21 +31,24 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px;
   width: 100%;
-  height: 60px;
   font-size: 16px;
-  padding: 0 20px;
+  z-index: 1;
+  margin-top: 18px;
+}
+
+nav {
+  padding: 0 16px;
+  border-radius: 50px;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  z-index: 1;
 }
 
 nav ul {
   display: flex;
   list-style: none;
   padding: 0;
-  gap: 40px;
+  gap: 18px;
 }
 
 nav a {
